plugins {
    id 'application'
    id 'checkstyle'
    id 'uk.gov.hmcts.java' version '0.12.68'
    id 'pmd'
    id 'jacoco'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.springframework.boot' version '4.1.0'
    id 'org.owasp.dependencycheck' version '12.2.2'
    id 'com.github.ben-manes.versions' version '0.54.0'
    id "info.solidsoft.pitest" version '1.19.0'
    id 'org.sonarqube' version '7.3.1.8318'
    id 'com.gorylenko.gradle-git-properties' version '4.0.1'
    id "io.freefair.lombok" version "9.5.0"
}
ext {
  nettyVersion = '4.2.14.Final'
}

group = 'uk.gov.hmcts.reform'
version = '1.0.2'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

tasks.withType(JavaExec).configureEach {
  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
}

gitProperties {
    gitPropertiesResourceDir = new File("${project.rootDir}/src/main/resources/uk/gov/hmcts/reform/pcqloader/gitcommit")
    keys = ['git.commit.id','git.commit.time']
    dateFormat = "yyyy-MM-dd'T'HH:mmZ"
    dateFormatTimeZone = "GMT"
}

sourceSets {
    test {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/test/java')
        }
        resources.srcDir file('src/test/resources')
    }

    functionalTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/functionalTest/java')
        }
        resources.srcDir file('src/functionalTest/resources')
    }

    integrationTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/integrationTest/java')
        }
        resources.srcDir file('src/integrationTest/resources')
    }

    smokeTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/smokeTest/java')
        }
        resources.srcDir file('src/smokeTest/resources')
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntime.extendsFrom testRuntime
    functionalTestImplementation.extendsFrom testImplementation
    functionalTestRuntime.extendsFrom testRuntime
    smokeTestRuntime.extendsFrom testRuntime
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

task unit(type: Test, description: 'Runs the unit tests.', group: 'Verification') {
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform()
}

task functional(type: Test) {
    group = 'Functional Tests'
    description = 'Verifies that files from functionPreDeploy step were processed following job creation in AKS'
    setTestClassesDirs(sourceSets.functionalTest.output.classesDirs)
    setClasspath(sourceSets.functionalTest.runtimeClasspath)
    include "uk/gov/hmcts/reform/pcqloader/postdeploy/**"
}

task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    useJUnitPlatform()
}

task fortifyScan(type: JavaExec)  {
    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

checkstyle {
  maxWarnings = 0
  toolVersion = '13.4.0'
  // need to set configDir to rootDir otherwise submodule will use submodule/config/checkstyle
  configDirectory = new File(rootDir, 'config/checkstyle')
}

pmd {
    sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
    reportsDir = file("$project.buildDir/reports/pmd")
    // https://github.com/pmd/pmd/issues/876
    ruleSets = []
    ruleSetFiles = files("config/pmd/ruleset.xml")
}

project.tasks['jacocoTestReport'].dependsOn test, integration

jacocoTestReport {
    executionData(test, integration)
    reports {
        xml.required = true
        csv.required = false
        xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
    }
}

project.tasks['sonarqube'].dependsOn jacocoTestReport

pitest {
    junit5PluginVersion.set('1.2.1')
    targetClasses = ['uk.gov.hmcts.reform.pcqloader.*']
    threads = 10
    enableDefaultIncrementalAnalysis = true
    outputFormats = ['XML', 'HTML']
    timestampedReports = true
    mutationThreshold = 50
    timeoutConstInMillis = 30000

}

project.tasks['pitest'].group = "Verification"

sonarqube {
    properties {
        property "sonar.projectName", "Reform :: pcq-loader"
        property "sonar.projectKey", "uk.gov.hmcts.reform:pcq-loader"
        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
    }
}

dependencyUpdates.resolutionStrategy {
    componentSelection { rules ->
        rules.all {
            def isNonStable = { String version ->
                ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'b', 'ea'].any { qualifier ->
                    version ==~ /(?i).*[.-]\$qualifier[.\\d-+]*/
                }
            }
            if (isNonStable(candidate.version) && !isNonStable(currentVersion)) {
                selection.reject('Release candidate')
            }
        }
    }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
    // Specifies if the build should be failed if a CVSS score above a specified level is identified.
    // range of 0-10 fails the build, anything greater and it doesn't fail the build
    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
    suppressionFile = 'config/owasp/suppressions.xml'

    analyzers {
      // Disable scanning of .NET related binaries
      assemblyEnabled = false
    }
}

dependencyManagement {
    dependencies {
        // CVE-2021-29425
        dependency group: 'commons-io', name: 'commons-io', version: '2.22.0'
    }
    imports {
      mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.1.2'
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
      url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}

def versions = [
        feignForm           : '3.8.0',
        junit               : '5.9.2',
        reformLogging       : '8.0.0',
        springBoot          : springBoot.class.package.implementationVersion,
        restAssured         : '6.0.0',
        lombok              : '1.18.46',
        testcontainers      : '1.21.4'
]

dependencies {

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web-services'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
    implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'

    implementation group: 'com.azure', name: 'azure-storage-blob', version: '12.32.0'

    implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
    implementation group: "com.networknt", name: "json-schema-validator", version: "3.0.5"

    implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '13.13'
    implementation group: 'io.github.openfeign.form', name: 'feign-form', version: versions.feignForm
    implementation group: 'io.github.openfeign.form', name: 'feign-form-spring', version: versions.feignForm

    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '9.0'
    implementation group: 'com.microsoft.azure', name: 'applicationinsights-core', version: '3.7.9'

    implementation group: 'com.github.hmcts', name: 'pcq-commons', version: '2.0.0'

    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.6.0'
    implementation group: 'commons-net', name: 'commons-net', version: '3.13.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'

    testImplementation(platform(group: 'org.junit', name: 'junit-bom', version: '6.1.2'))
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'

    testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.15.0'
    testImplementation 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'

    testImplementation group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured
    testImplementation group: 'io.rest-assured', name: 'json-path', version: versions.restAssured

    testImplementation group: 'org.mockito', name: 'mockito-core'

    testImplementation group: 'org.wiremock', name: 'wiremock-standalone', version: '3.13.2'

    testImplementation 'com.github.hmcts:fortify-client:1.4.10:all'

    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
    testImplementation group: "org.testcontainers", name: "junit-jupiter", version: versions.testcontainers

    integrationTestImplementation sourceSets.main.runtimeClasspath
    integrationTestImplementation sourceSets.test.runtimeClasspath

    functionalTestImplementation sourceSets.main.runtimeClasspath
    functionalTestImplementation sourceSets.test.runtimeClasspath
    functionalTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
    functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok

    smokeTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
    smokeTestRuntime group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured
    smokeTestRuntime group: 'io.rest-assured', name: 'json-path', version: versions.restAssured
    smokeTestRuntime group: 'io.rest-assured', name: 'kotlin-extensions', version: versions.restAssured

    smokeTestImplementation sourceSets.main.runtimeClasspath
    smokeTestImplementation sourceSets.test.runtimeClasspath
}

test {
    useJUnitPlatform()
    failFast = true
}

application {
  mainClass = 'uk.gov.hmcts.reform.pcqloader.PcqLoaderApplication'
}

bootJar {
    archiveFileName = 'pcq-loader.jar'

    manifest {
        attributes('Implementation-Version': project.version.toString())
    }
}

rootProject.tasks.named("processTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processFunctionalTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processIntegrationTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processSmokeTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processResources") {
  dependsOn("generateGitProperties")
}
